# mdmc

./: .gitignore  README.md  pyproject.toml
examples/: calculator.md  diamond.md  fibonacci.md  fizzbuzz.md  guessing_game.md  hello.md  maze.md  primes.md  rot13.md  sort.md
src/mdmc/: __init__.py  assembler.py  cli.py  compiler.py  llm.py  prompts.py
