[project]
name = "mdmc"
version = "0.1.0"
description = "Markdown to Machine Code - Your spec IS your source code"
requires-python = ">=3.11"
dependencies = [
    "click",
    "rich",
]

[project.scripts]
mdmc = "mdmc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdmc"]
